--- a/css/style.css
+++ b/css/style.css
@@ -1,121 +1,67 @@
-a{
-    text-decoration: none;
-    z-index: 10;
-}   
-
-.w100{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    vertical-align: bottom;
+p,
+h1 {
+  margin: 0;
+  padding: 0;
 }
 
-.panelmenu_grid{
-    width: 80%;
-    margin: 30px auto;
-    display: grid;
-    grid-template-columns: 3fr 2fr;
-    grid-template-rows: 35vh 35vh;
+.content_area {
+  width: 80%;
+  display: flex;
+  margin: 20px auto;
+  padding: 10px;
+  border: 1px solid #5c5c5c;
 }
 
-.grid_large{
-    grid-row: 1/3;
-    position: relative;
+.content_area img {
+  width: 40%;
 }
 
-.grid_small{
-    position: relative;
+.content_area .text_area {
+  margin-left: 10px;
 }
 
-.hidden_text{
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: all 0.2s ease;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    font-size: 24px;
-    font-weight: bold;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    color: #fefefe;
-    box-sizing: border-box;
-    padding: 25% 10%;
-    text-align: center;
+#main span {
+  color: #555;
+  font-size: 14px;
 }
 
-.grid_small .hidden_text{
-    font-size: 16px;
-    padding: 15% 10%;
+#main div.module.main-module {
+  max-width: 1200px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
-.grid_large:hover .hidden_text,
-.grid_small:hover .hidden_text{
-    opacity: 1;
+#main div.module.main-module figure {
+  flex: 1 1 25%;
+  margin-right: 3.33333%;
 }
 
-.grid_large:hover .menu_img,
-.grid_small:hover .menu_img{
-    filter: brightness(50%);
+#main div.module.main-module img {
+  width: 100%;
+  vertical-align: top;
 }
 
-.more_button{
-    width: 30%;
-    margin: 15px auto;
-    display: block;
-    border-radius: 15px 15px;
-    border: 1px solid #626262;
-    font-size: 16px;
-    background-color: #fad7e6;
-    grid-column: 1/3;
-    transition: all 0.2s ease;
+#main div.module.main-module div {
+  flex: 1 1 68.33333%;
 }
 
-.more_button a{
-    display: block;
-    line-height: 30px;
+#main div.module.main-module h2 {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
 }
 
-.more_button:hover{
-    width: 80%;
-    background-color: #313131;
+#main div.module.main-module h3 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  border-bottom: 1px solid #555;
 }
-
-.more_button:hober a{
-    color: #ffffff;
-}
-
-.new{
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 30%;
-}
-/* レスポンシブ対応 */
-@media screen and (max-width:820px) {
-    .panelmenu_grid{
-        display: flex;
-        flex-direction: column;
-    }
-
-    .more_button{
-        width: 70%;
-    }
-
-    .more_button a{
-        line-height: 40px;
-    }
-}
-
-@media screen and (max-width:500px) {
-    .menu_img{
-        filter: brightness(50%);
-    }
-    .hidden_text{
-        font-size: 16px;
-        padding-top:15%;
-        opacity: 1;
-    }
-}
+/*# sourceMappingURL=style.css.map */
