--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+#main {
+  padding: 15px;
+  margin: 30px 15px;
+  border: 1px solid #555;
+}
+
 #main span {
   color: #555;
   font-size: 14px;
@@ -41,5 +47,127 @@
   margin-bottom: 10px;
   font-size: 16px;
   border-bottom: 1px solid #555;
+}
+
+body {
+  font-family: sans-serif;
+}
+
+.ly_cont {
+  max-width: 1200px;
+  padding: 15px;
+  margin: 30px 15px;
+  border: 1px solid #555;
+}
+
+.bl_media {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.bl_media_imagewrapper {
+  flex: 1 1 25%;
+  margin-right: 3.33333%;
+}
+
+.bl_media_imagewrapper img {
+  width: 100%;
+  vertical-align: top;
+}
+
+.bl_media_body {
+  flex: 1 1 68.33333%;
+}
+
+.bl_media_title {
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.bl_media_body > span {
+  color: #555;
+  font-size: 14px;
+}
+
+.subTitle {
+  margin: 10px 0;
+  font-size: 16px;
+  border-bottom: 1px solid #555;
+}
+
+.card {
+  width: 80%;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+}
+
+.card__margin--80 {
+  margin: 80px auto;
+}
+
+.card__img-wrapper {
+  position: relative;
+  padding-top: 56.25%;
+  overflow: hidden;
+}
+
+.card__img {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.card__body {
+  padding: 15px;
+}
+
+.card__body > *:last-child {
+  margin-bottom: 0;
+}
+
+.card__title {
+  margin-bottom: 5px;
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+
+.card__text {
+  color: #777;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  border: solid 1px #777;
+  padding: 15px 15px 0;
+  margin: 15px;
+}
+
+.cards--col3 {
+  margin-bottom: -30px;
+}
+
+.cards--col3 > .cards__item {
+  width: 31.707%;
+  margin-right: 2.43902%;
+  margin-bottom: 30px;
+}
+
+.cards--col3 > .cards__item:nth-of-type(3n) {
+  margin-right: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .cards--col3 {
+    margin-bottom: -20px;
+  }
+  .cards > .cards__item {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
